--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+Dependencies
 /node_modules
-/.pnp
-.pnp.js
+/venv
 
-# testing
-/coverage
-
-# production
+Build artifacts
 /build
+/dist
+/.parcel-cache
 
-# misc
-.DS_Store
+Python cache
+pycache/
+*.pyc
+*.pyo
+*.pyd
+
+Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+IDE and OS files
+.vscode/
+.idea/
+*.suo
+.ntvs
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
